include/gemini3d.h

//extern void memblock_from_C(double**, double**, double**);
extern void set_start_values_auxtimevars_C(double*, double*, double*);
extern void set_start_timefromcfg_C(void**, int*, double*, double*);
extern void set_start_values_auxvars_C(int*, void**, double**);
extern void get_cfg_timevars_C(void**,double*,bool*,double*,int*,int*);
extern void msisinit_C(void**);
extern void init_neutralBG_input_C(void**, int*, void**, double*, double*, int*, double*, void**);
extern void set_update_cadence_C(int*);
extern void neutral_atmos_winds_C(void**, int*, void**, int*, double*, void**);
extern void get_solar_indices_C(void**, double*, double*);
extern void v12rhov1_C(double**, double**);
extern void T2rhoe_C(double**, double**);
extern void interface_vels_allspec_C(int*, void**, double**, void**, int*);
extern void sweep3_allparams_C(double**, double**, void**, int*, void**, double*);
extern void sweep3_allspec_mass_C(double**, double**, void**, int*, void**, double*);
extern void plasma_output_nompi_C(void**, int*, double*, double**, double**, int*, double*, double*, double*);
extern void setv2v3_C(double*, double*);
extern void set_global_boundaries_allspec_C(int*, void**, double**, double**, void**, int*);
extern void init_precipinput_C(void**, int*, void**, double*, double*, int*, double*, void**);
extern void init_efieldinput_nompi_C(void**, int*, void**, double*, double*, int*, double*, void**);
extern void init_solfluxinput_C(void**, int*, void**, double*, double*, int*, double*, void**);